samples/_failures_safe/1761421917_4022c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7946727.c: In function ‘main’:
./samples/SAFE/__tmp_c7946727.c:162:5: error: expected ‘,’ or ‘;’ at end of input
  162 |     int line = 1
      |     ^~~
./samples/SAFE/__tmp_c7946727.c:162:5: error: expected declaration or statement at end of input
